fixed collapse bug

--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ section {
   align-items: center;
 }
 
-.btn-collapse {
+.btn--collapse {
   margin-right: 20px;
   border-radius: 100%;
   width: 40px;
@@ -65,7 +65,7 @@ section {
   cursor: pointer;
 }
 
-.btn-collapse:focus {
+.btn--collapse:focus {
   outline: none;
 }
 
